Keyword deleting was implemented.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/Settings.html
+++ b/LinkedIn/LinkedInScanPost/Settings.html
@@ -21,7 +21,7 @@
 <body onload="fillKeywords();">
 	<div class="input-group">
 		<span class="input-group-addon">Keyword</span>
-		<input type="text" class="form-control" placeholder="Keyword" id="keyword">
+		<input type="text" class="form-control" placeholder="Type here" id="keyword">
 	</div>
 
 	<button type="button" class="btn btn-default" onclick="addKeyword();">Add</button>
