Design was updated.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -24,6 +24,10 @@
 	<script type="text/javascript" src="LoadData.js"></script>
 </head>
 <body class="yui3-skin-sam	yui-skin-sam">
+	<ul class="nav nav-tabs" role="tablist">
+		<li><a href="Settings.html">Keywords</a></li>
+		<li class="active"><a href="LinkedIn.html">Messages</a></li>
+	</ul>
 	<div id="search">
 	</div>
 	<script type="IN/Login" data-onauth="loadData"></script>
