--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -7,6 +7,7 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<link rel="stylesheet" href="ScanPosts.css" />
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
