Design was changed, counters for received and selected items were added.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -25,10 +25,12 @@
 	<script type="text/javascript" src="LoadData.js"></script>
 </head>
 <body class="yui3-skin-sam	yui-skin-sam">
-	<ul class="nav nav-tabs" role="tablist">
-		<li><a href="Settings.html">Keywords</a></li>
-		<li class="active"><a href="LinkedIn.html">Messages</a></li>
-	</ul>
+	<div>
+		<ul class="nav nav-pills">
+			<li><a href="Settings.html">Keywords</a></li>
+			<li class="active"><a href="LinkedIn.html">Messages&nbsp;&nbsp;<span class="badge pull-right" id="selected">Selected</span><span class="badge pull-right" id="new">New</span></a></li>
+		</ul>
+	</div>
 	<div id="search">
 	</div>
 	<script type="IN/Login" data-onauth="loadData"></script>
