--- a/LinkedIn/LinkedInScanPost/Settings.html
+++ b/LinkedIn/LinkedInScanPost/Settings.html
@@ -19,10 +19,12 @@
 	<script type="text/javascript" src="LoadData.js"></script></head>
 	<script type="text/javascript" src="Keywords.js"></script></head>
 <body onload="fillKeywords();">
-	<ul class="nav nav-tabs" role="tablist">
-		<li class="active"><a href="Settings.html">Keywords</a></li>
-		<li><a href="LinkedIn.html">Messages</a></li>
-	</ul>
+	<div>
+		<ul class="nav nav-pills">
+			<li class="active"><a href="Settings.html">Keywords</a></li>
+			<li><a href="LinkedIn.html">Messages</a></li>
+		</ul>
+	</div>
 	<div class="input-group">
 		<span class="input-group-btn">
 			<button type="button" class="btn btn-default" onclick="addKeyword();">Add</button>
