Full list of groups is selected.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -28,7 +28,13 @@
 	<div>
 		<ul class="nav nav-pills">
 			<li><a href="Settings.html">Keywords</a></li>
-			<li class="active"><a href="LinkedIn.html">Messages&nbsp;&nbsp;<span class="badge pull-right" id="selected">Selected</span><span class="badge pull-right" id="new">New</span></a></li>
+			<li class="active">
+				<a href="LinkedIn.html">Messages&nbsp;&nbsp;
+					<span class="badge pull-right" id="selected">Selected</span>
+					<span class="badge pull-right" id="new">New</span>
+					<span class="badge pull-right" id="groups">Groups</span>
+				</a>
+			</li>
 		</ul>
 	</div>
 	<div id="search">
