Error dialog was added.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -39,6 +39,27 @@
 	</div>
 	<div id="search">
 	</div>
+	<!-- Error dialog -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="modalErrorDialog"
+		aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">
+						<span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="modalErrorTitle">
+						Error!</h4>
+				</div>
+				<div class="modal-body">
+					<p id="modalErrorMessage"></p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" data-dismiss="modal">
+						Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script type="IN/Login" data-onauth="loadData"></script>
 </body>
 </html>
