--- a/LinkedIn/LinkedInScanPost/Settings.html
+++ b/LinkedIn/LinkedInScanPost/Settings.html
@@ -7,6 +7,7 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<link rel="stylesheet" href="ScanPosts.css" />
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -16,23 +17,33 @@
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-	<script type="text/javascript" src="LoadData.js"></script></head>
-	<script type="text/javascript" src="Keywords.js"></script></head>
-<body onload="fillKeywords();">
-	<div>
-		<ul class="nav nav-pills">
-			<li class="active"><a href="Settings.html">Keywords</a></li>
-			<li><a href="LinkedIn.html">Messages</a></li>
-		</ul>
-	</div>
-	<div class="input-group">
-		<span class="input-group-btn">
-			<button type="button" class="btn btn-default" onclick="addKeyword();">Add</button>
-		</span>
-		<input type="text" class="form-control" placeholder="Type keyword here" id="keyword">
-	</div>
-
-	<ul class="list-group" id="keywords">
-	</ul>
-</body>
+	<script type="text/javascript" src="LoadData.js"></script>
+	<script type="text/javascript" src="Keywords.js"></script>
+</head>
+	<body onload="fillKeywords();">
+		<div class="center">
+			<div>
+				<ul class="nav nav-pills">
+					<li class="active"><a href="Settings.html">Keywords</a></li>
+					<li><a href="LinkedIn.html">Messages</a></li>
+				</ul>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title" id="last_visited_time">Last scanned</h3>
+				</div>
+				<div class="panel-body">
+					<div class="input-group">
+						<span class="input-group-btn">
+							<button type="button" class="btn btn-default" onclick="addKeyword();">
+								Add</button>
+						</span>
+						<input type="text" class="form-control" placeholder="Type keyword here" id="keyword">
+					</div>
+					<ul class="list-group" id="keywords">
+					</ul>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
