--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -10,15 +10,27 @@
 	<link rel="stylesheet" href="ScanPosts.css" />
 
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script src="http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
 
 	<script type="text/javascript" src="http://platform.linkedin.com/in.js">
 		api_key: 75548prrx707qw
 		scope: rw_groups
 		authorize: true
+	</script>
+	
+	<script>
+		var page = {
+			showErrorMessage: function (error){
+				document.getElementById('modalErrorTitle').innerHTML = 'Error ' + error.status;
+				document.getElementById('modalErrorMessage').innerHTML = error.message;
+				$('#myModal').modal({
+					keyboard: true
+				});
+			}
+		}
 	</script>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
