Special versions of pages for integration with the blog were added.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -54,13 +54,13 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">Totals&nbsp;&nbsp;
-						<span class="badge pull-right" id="selected">Selected</span>
-						<span class="badge pull-right" id="new">New</span>
+						<span class="badge pull-right" id="selected" style="margin-left: 5px;">Selected</span>
+						<span class="badge pull-right" id="new" style="margin-left: 5px;">New</span>
 						<span class="badge pull-right" id="groups">Groups</span>
 					</h3>
 				</div>
 				<div class="panel-body">
-					<div id="search">
+					<div id="posts">
 					</div>
 				</div>
 			</div>
