--- a/LinkedIn/LinkedInScanPost/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/LinkedInInner.html
@@ -1,7 +1,7 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" >
+﻿<!doctype html>
+<html>
 <head>
-	<title>Add keywords</title>
+	<title>Selected LinkeIn posts</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
 	<!-- Optional theme -->
@@ -15,33 +15,34 @@
 	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
 
+	<script type="text/javascript" src="http://platform.linkedin.com/in.js">
+		api_key: 75548prrx707qw
+		scope: rw_groups
+		authorize: true
+	</script>
+	
+	<script>
+		var page = {
+			showErrorMessage: function (error) {
+				alert(error);
+			}
+		}
+	</script>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 	<script type="text/javascript" src="LoadData.js"></script>
-	<script type="text/javascript" src="Keywords.js"></script>
 </head>
-	<body onload="fillKeywords();">
-		<div class="center">
-			<div>
-				<ul class="nav nav-pills">
-					<li class="active"><a href="Settings.html">Keywords</a></li>
-					<li><a href="LinkedIn.html">Messages</a></li>
-				</ul>
+	<body class="yui3-skin-sam	yui-skin-sam" onload="authLinkedIn();">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Totals
+					<span class="badge pull-right" id="selected" style="margin-left: 5px;">Selected</span>
+					<span class="badge pull-right" id="new" style="margin-left: 5px;">New</span>
+					<span class="badge pull-right" id="groups">Groups</span>
+				</h3>
 			</div>
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" id="last_visited_time">Last scanned</h3>
-				</div>
-				<div class="panel-body">
-					<div class="input-group">
-						<span class="input-group-btn">
-							<button type="button" class="btn btn-default" onclick="addKeyword();">
-								Add</button>
-						</span>
-						<input type="text" class="form-control" placeholder="Type keyword here" id="keyword">
-					</div>
-					<div class="list-group" id="keywords">
-					</div>
+			<div class="panel-body">
+				<div id="posts">
 				</div>
 			</div>
 		</div>
