LinkedIn logout button was added.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/LinkedInInner.html
@@ -31,6 +31,15 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 	<script type="text/javascript" src="LoadData.js"></script>
+	<script type="text/javascript">
+		var messageEventHandler = function (event) {
+			if ((event.origin === 'http://scanposts.azurewebsites.net') && (event.data === 'linkedInLogout')) {
+				linkedInLogout();
+			}
+		};
+
+		(function() { window.addEventListener('message', messageEventHandler, false); })();
+	</script>
 </head>
 	<body class="yui3-skin-sam	yui-skin-sam" onload="authLinkedIn();">
 		<div class="panel panel-default">
