Initialization of font size was modified.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/Settings.html
+++ b/LinkedIn/LinkedInScanPost/Settings.html
@@ -40,8 +40,8 @@
 						</span>
 						<input type="text" class="form-control" placeholder="Type keyword here" id="keyword">
 					</div>
-					<div class="list-group" id="keywords">
-					</div>
+					<ul class="list-group" id="keywords">
+					</ul>
 				</div>
 			</div>
 		</div>
