--- a/LinkedIn/LinkedInScanPost/SettingsInner.html
+++ b/LinkedIn/LinkedInScanPost/SettingsInner.html
@@ -33,8 +33,8 @@
 					</span>
 					<input type="text" class="form-control" placeholder="Type keyword here" id="keyword">
 				</div>
-				<div class="list-group" id="keywords">
-				</div>
+				<ul class="list-group" id="keywords">
+				</ul>
 			</div>
 		</div>
 	</body>
