The button was added to log out from LinkedIn.
https://www.evernote.com/shard/s132/nl/14501366/81db841e-7191-48c6-9b74-73f2257dc477

--- a/LinkedIn/LinkedInScanPost/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/LinkedInInner.html
@@ -33,7 +33,7 @@
 	<script type="text/javascript" src="LoadData.js"></script>
 	<script type="text/javascript">
 		var messageEventHandler = function (event) {
-			if ((event.origin === 'http://scanposts.azurewebsites.net') && (event.data === 'linkedInLogout')) {
+			if ((event.origin === 'http://townbreath.com') && (event.data === 'linkedInLogout')) {
 				linkedInLogout();
 			}
 		};
