--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -14,6 +14,8 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
+	<script type="text/javascript" src="scripts/jquery.highlight-4.closure.js"></script>
+	<script type="text/javascript" src="scripts/jquery.highlight-4.js"></script>
 
 	<script type="text/javascript" src="http://platform.linkedin.com/in.js">
 		api_key: 75548prrx707qw
