Functions working with settings were moved into special module.
https://www.evernote.com/shard/s132/nl/14501366/e13a8588-4c3b-46de-af7c-a7d9c891f46c

--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -36,6 +36,7 @@
 	</script>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
+	<script type="text/javascript" src="Settings.js"></script>
 	<script type="text/javascript" src="LoadData.js"></script>
 </head>
 	<body class="yui3-skin-sam	yui-skin-sam" onload="$('#linkedin_login').height($('#navigation').height());">
