--- a/LinkedIn/LinkedInScanPost/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/LinkedInInner.html
@@ -31,8 +31,10 @@
 		}
 	</script>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
+	
+	<script type="text/javascript" src="Settings.js"></script>
 	<script type="text/javascript" src="LoadData.js"></script>
+
 	<script type="text/javascript">
 		var messageEventHandler = function (event) {
 			if ((event.origin === 'http://townbreath.com') && (event.data === 'linkedInLogout')) {
