--- a/LinkedIn/LinkedInScanPost/SettingsInner.html
+++ b/LinkedIn/LinkedInScanPost/SettingsInner.html
@@ -16,7 +16,8 @@
 	<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js"></script>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
+	
+	<script type="text/javascript" src="Settings.js"></script>
 	<script type="text/javascript" src="LoadData.js"></script>
 	<script type="text/javascript" src="Keywords.js"></script>
 </head>
