--- a/LinkedIn/LinkedInScanPost/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/LinkedIn.html
@@ -44,38 +44,42 @@
 		}
 	</script>
 </head>
-	<body class="yui3-skin-sam	yui-skin-sam" onload="$('#linkedin_login').height($('#navigation').height());">
+	<body class="yui3-skin-sam	yui-skin-sam" onload="authLinkedIn();">
 		<div class="center">
-			<div style="text-align: right; position: absolute; width: inherit;" id="linkedin_login">
-				<script type="IN/Login" data-onauth="loadData"></script>
-			</div>
-
-			<div id="navigation">
-				<ul class="nav nav-pills">
-					<li><a href="Settings.html">Keywords</a></li>
-					<li class="active">
-						<a href="LinkedIn.html">Messages</a>
-					</li>
-				</ul>
-			</div>
-
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title">Totals&nbsp;&nbsp;
-						<span class="badge pull-right" id="selected" style="margin-left: 5px;">Selected</span>
-						<span class="badge pull-right" id="new" style="margin-left: 5px;">New</span>
-						<span class="badge pull-right" id="groups">Groups</span>
-					</h3>
+			<div id="panel_posts">
+				<div id="navigation">
+					<ul class="nav nav-pills">
+						<li><a href="Settings.html">Keywords</a></li>
+						<li class="active">
+							<a href="LinkedIn.html">Messages</a>
+						</li>
+					</ul>
 				</div>
-				<div class="panel-body">
-					<div id="posts">
+
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Totals&nbsp;&nbsp;
+							<span class="badge pull-right" id="selected" style="margin-left: 5px;">Selected</span>
+							<span class="badge pull-right" id="new" style="margin-left: 5px;">New</span>
+							<span class="badge pull-right" id="groups">Groups</span>
+						</h3>
+					</div>
+					<div class="panel-body">
+						<div id="posts">
+						</div>
 					</div>
 				</div>
+			</div>
+			
+			<div class="jumbotron" style="visibility: hidden;" id="panel_login">
+				<h1>Authentication required!</h1>
+				<p>You should log into LinkedIn to see the posts.</p>
+				<p><a class="btn btn-primary btn-lg" role="button" onclick="authLinkedIn();">Log In</a></p>
 			</div>
 
 			<!-- Error dialog -->
 			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="modalErrorDialog"
-				 aria-hidden="true">
+			     aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
 						<div class="modal-header">
