The button "Find more" was added.
https://www.evernote.com/shard/s132/nl/14501366/e6dc4542-6c6e-4f1f-b528-9327e8bc3675

--- a/LinkedIn/LinkedInScanPost/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/LinkedInInner.html
@@ -39,14 +39,30 @@
 					console.log('open post: ' + url);
 					window.parent.postMessage(url, "http://townbreath.com");
 				}
+			},
+
+			linkedInLogout: function () {
+				IN.User.logout(function () {
+					document.getElementById('posts').innerHTML = "";
+					document.getElementById('panel_posts').style.visibility = 'hidden';
+					document.getElementById('panel_login').style.visibility = 'visible';
+					updateParentHeight();
+				});
+			},
+
+			linkedInFindMore: function () {
+				window.location.reload(true);
 			}
 		}
 	</script>
 
 	<script type="text/javascript">
 		var messageEventHandler = function (event) {
-			if ((event.origin === 'http://townbreath.com') && (event.data === 'linkedInLogout')) {
-				linkedInLogout();
+			if ((event.origin === 'http://townbreath.com')) {
+				if (event.data === 'linkedInLogout')
+					page.linkedInLogout();
+				else if (event.data === 'linkedInFindMore')
+					page.linkedInFindMore();
 			}
 		};
 
