--- a/LinkedIn/LinkedInScanPost/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/LinkedInInner.html
@@ -31,7 +31,7 @@
 	<script>
 		var page = {
 			showErrorMessage: function (error) {
-				alert(error);
+				alert(error.message);
 			},
 
 			openPost: function (url) {
