--- a/LinkedIn/LinkedInScanPost/SettingsInner.html
+++ b/LinkedIn/LinkedInScanPost/SettingsInner.html
@@ -24,7 +24,7 @@
 	<body onload="fillKeywords();">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title" id="last_visited_time">Last scanned</h3>
+				<h3 class="panel-title" id="last_visited_time">Last post at</h3>
 			</div>
 			<div class="panel-body">
 				<div class="input-group">
