--- a/LinkedIn/LinkedInScanPost/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/LinkedInInner.html
@@ -68,6 +68,16 @@
 
 		(function() { window.addEventListener('message', messageEventHandler, false); })();
 	</script>
+	
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-58876334-1', 'auto');
+		ga('send', 'pageview');
+	</script>	
 </head>
 	<body class="yui3-skin-sam	yui-skin-sam" onload="authLinkedIn();">
 		<div class="panel panel-default" id="panel_posts">
