Paths to pages were corrected.

--- a/LinkedIn/LinkedInScanPost/HTML/LinkedIn.html
+++ b/LinkedIn/LinkedInScanPost/HTML/LinkedIn.html
@@ -22,19 +22,21 @@
 		<!-- ReSharper disable WrongExpressionStatement -->
 		<!-- ReSharper disable StatementIsNotTerminated -->
 		<!-- ReSharper disable InconsistentNaming -->
+		<!--
 		<script type="text/javascript" src="http://platform.linkedin.com/in.js">
 			api_key: 75548prrx707qw
 			scope: rw_groups
 			authorize: true
 		</script>
+		-->
 
-		<!-- dev.townbreath.com (log in with another login)
-			<script type="text/javascript" src="http://platform.linkedin.com/in.js">
-		api_key: 75iztr1xt8c6k2
-		scope: rw_groups
-		authorize: true
-	</script>
-			-->
+		<!-- dev.townbreath.com (log in with another login) -->
+		<script type="text/javascript" src="http://platform.linkedin.com/in.js">
+			api_key: 75iztr1xt8c6k2
+			scope: rw_groups
+			authorize: true
+		</script>
+
 		<!-- ReSharper restore InconsistentNaming -->
 		<!-- ReSharper restore StatementIsNotTerminated -->
 		<!-- ReSharper restore WrongExpressionStatement -->
@@ -87,9 +89,9 @@
 			<div id="panel_posts" style="visibility: hidden;">
 				<div id="navigation">
 					<ul class="nav nav-pills">
-						<li><a href="Settings.html">Keywords</a></li>
+						<li><a href="../HTML/Settings.html">Keywords</a></li>
 						<li class="active">
-							<a href="LinkedIn.html">Messages</a>
+							<a href="../HTML/LinkedIn.html">Messages</a>
 						</li>
 					</ul>
 				</div>
