--- a/LinkedIn/LinkedInScanPost/HTML/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/HTML/LinkedInInner.html
@@ -21,11 +21,21 @@
 		<!-- ReSharper disable InconsistentNaming -->
 		<!-- ReSharper disable WrongExpressionStatement -->
 		<!-- ReSharper disable StatementIsNotTerminated -->
+		
 		<script type="text/javascript" src="http://platform.linkedin.com/in.js">
 			api_key: 75548prrx707qw
 			scope: rw_groups
 			authorize: true
 		</script>
+
+		<!--
+			<script type="text/javascript" src="http://platform.linkedin.com/in.js">
+			api_key: 75iztr1xt8c6k2
+			scope: rw_groups
+			authorize: true
+		</script>
+		-->
+
 		<!-- ReSharper restore StatementIsNotTerminated -->
 		<!-- ReSharper restore WrongExpressionStatement -->
 		<!-- ReSharper restore InconsistentNaming -->
