--- a/LinkedIn/LinkedInScanPost/HTML/Settings.html
+++ b/LinkedIn/LinkedInScanPost/HTML/Settings.html
@@ -40,8 +40,8 @@
 		<div class="center">
 			<div>
 				<ul class="nav nav-pills">
-					<li class="active"><a href="Settings.html">Keywords</a></li>
-					<li><a href="LinkedIn.html">Messages</a></li>
+					<li class="active"><a href="../HTML/Settings.html">Keywords</a></li>
+					<li><a href="../HTML/LinkedIn.html">Messages</a></li>
 				</ul>
 			</div>
 			<div class="panel panel-default">
