--- a/LinkedIn/LinkedInScanPost/HTML/LinkedInInner.html
+++ b/LinkedIn/LinkedInScanPost/HTML/LinkedInInner.html
@@ -117,8 +117,19 @@
 				<div id="posts">
 				</div>
 			</div>
+			<div>
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- Adaptive banner for ScanPosts -->
+				<ins class="adsbygoogle"
+					 style="display:block"
+					 data-ad-client="ca-pub-8470958084127593"
+					 data-ad-slot="3972563062"
+					 data-ad-format="auto"></ins>
+				<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>		
+			</div>
 		</div>
-		
 		<div class="jumbotron" style="visibility: hidden;" id="panel_login">
 			<h1>Authentication required!</h1>
 			<p>You should log into LinkedIn to see the posts.</p>
