--- a/LinkedIn/LinkedInScanPost/HTML/SettingsInner.html
+++ b/LinkedIn/LinkedInScanPost/HTML/SettingsInner.html
@@ -52,6 +52,18 @@
 				<ul class="list-group" id="keywords">
 				</ul>
 			</div>
+			<div>
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- Adaptive banner for ScanPosts -->
+				<ins class="adsbygoogle"
+					 style="display:block"
+					 data-ad-client="ca-pub-8470958084127593"
+					 data-ad-slot="3972563062"
+					 data-ad-format="auto"></ins>
+				<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
 		</div>
 	</body>
 <!-- ReSharper restore UnknownCssClass -->
